# UKTechArena-3DGraphics_Compression_Algorithm-Metaverse

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  build.sh  output_location  test.sh
include/: LZSS.md  LZSS_Compression.h  LZSS_Decompression.h  LZSS_helper.h  serialize.h
scripts/: README.md  build_ai.sh  build_draco.sh  build_non_ai.sh  iqm.py  iqm.sh  offscreen_render.py  requirements.txt  submit_score.sh  test_ai.sh  test_draco.sh  test_non_ai.sh
src/: HuffmanC.cpp  HuffmanD.cpp  decoder_main.cpp  encoder_main.cpp  serialize_specs.md
